<resources>
    <string name="app_name">Eatee</string>
    <string name="login">Log in</string>
    <string name="don_t_have_an_account_yet">Don\'t have an account yet?</string>
    <string name="forgot_password"><u>Forgot password</u></string>
    <string name="student_mail">Student email</string>
    <string name="password">Password</string>
    <string name="eatee_logo">Eatee logo</string>
    <string name="schooldomain">School domain</string>
    <string name="register">register</string>
    <string name="next">Next</string>
    <string name="eggs">Eggs</string>
    <string name="gluten">Gluten</string>
    <string name="sulfites">Sulfites</string>
    <string name="lactose">Lactose</string>
    <string name="celery">Celery</string>
    <string name="milk">Milk</string>
    <string name="peanuts">Peanuts</string>
    <string name="lupine">Lupine</string>
    <string name="mollusks">Mollusks</string>
    <string name="nuts">Nuts</string>
    <string name="soy">Soy</string>
    <string name="mustard">Mustard</string>
    <string name="sesame_seeds">Sesame seeds</string>
    <string name="fish">Fish</string>
    <string name="crustaceans">Crustaceans</string>
    <string name="allergies">Allergies</string>
    <string name="twofa">2-Factor Authentication</string>
    <string name="enable">Do you want to enable 2-Factor Authentication?</string>
    <string name="yes">Yes!</string>
    <string name="disable"><u>No, I\'ll do it later</u></string>
    <string name="Okay">Okay!</string>
    <string name="welcomeMessage"><b>Welcome,</b></string>
    <string name="firstName"><b><u>{firstName}</u></b></string>
    <string name="exclamationMark"><b>!</b></string>
    <string name="menuMessage">What\'s on the menu today?</string>
    <string name="date">{Date}</string>
    <string name="navigation">Navigation</string>
    <string name="account">Account</string>
    <string name="orderFaster">Oder faster</string>
    <string name="or">or</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="makeYourOwnSandwich">make your own sandwich!</string>
    <string name="orders">Orders</string>
    <string name="tableTextViewOrder">Order</string>
    <string name="tableTextViewDateOrderedAt">Ordered at</string>
    <string name="tableTextViewDateOrderedFor">Ordered for</string>
    <string name="tableTextViewPrice">Price</string>
    <string name="tableTextViewStatus">Status</string>
    <string name="tableTextViewOrderContent">Lasagna</string>
    <string name="tableTextViewDateContent">04/12/2020</string>
    <string name="tableTextViewPriceContent">$4.99</string>
    <string name="tableTextViewStatusContent">Completed</string>
    <string name="textViewAllergies">Allergies</string>
    <string name="change">Change</string>
    <string name="test">Test</string>
    <string name="change_password">Change password</string>
    <string name="shield">Shield</string>
    <string name="confirmation">Password confirmation</string>
    <string name="navBars">Navigation bars</string>
    <string name="acceptChanges">Accept</string>
    <string name="filter">Filter</string>
    <string name="sandwiches">Sandwiches</string>
    <string name="lowToHigh">Low to high</string>
    <string name="highToLow">High to low</string>
    <string name="done">Done</string>
    <string name="addToCart">Add to cart</string>
    <string name="goToMenu">go to menu</string>
    <string name="changeMyAllergies">Change my allergies</string>
    <string name="order">Order</string>
    <string name="available">{availability}</string>
    <string name="productName"><b>{productName}</b></string>
    <string name="orderProductNames">Products</string>
    <string name="orderTotalPrice">Total</string>
    <string name="orderStatus">Status</string>
    <string name="orderDate">Date ordered</string>
    <string name="orderId">{orderId}</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="copy_key">*Do not forget to copy and paste the key into your 2FA app</string>
    <string name="code">6 Digit Code</string>
    <string name="posts">Posts</string>
    <string name="orderDateFor">Ordered for</string>
    <string name="card_number">Card number</string>
    <string name="cvc">CVC</string>
    <string name="expiry">Expiry</string>
    <string name="card_number_example">4242424242424242</string>
    <string name="cvc_example">***</string>
    <string name="expiry_example">04/24</string>
    <string name="pay">Pay</string>
    <string name="logout">Log out</string>
    <string name="paymentDone">Payment has been completed!</string>
    <string name="goBackToHome">Go back to home</string>
    <string name="orderFor">Order for:</string>
    <string name="paymentDate">2020-12-31</string>
</resources>