<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.customer.LoginScreen">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/eatee_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/eateead3a59" />

    <EditText
        android:id="@+id/email"
        android:layout_width="207dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:autofillHints="AUTOFILL_HINT_EMAIL_ADDRESS"
        android:ems="10"
        android:hint="@string/student_mail"
        android:inputType="textEmailAddress"
        android:linksClickable="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/code"
        android:layout_width="207dp"
        android:layout_height="51dp"
        android:layout_marginTop="8dp"
        android:autofillHints="AUTOFILL_HINT_PASSWORD"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="92dp"
        android:layout_height="54dp"
        android:layout_marginTop="32dp"
        android:onClick="goToHomeScreen"
        android:text="@string/login"
        android:textColor="@color/BluePinky"
        app:backgroundTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/code" />

    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="291dp"
        android:layout_height="55dp"
        android:layout_marginTop="69dp"
        android:onClick="goToFirstRegisterScreen"
        android:text="@string/don_t_have_an_account_yet"
        app:backgroundTint="#3F51B5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonLogin" />

    </androidx.constraintlayout.widget.ConstraintLayout>