<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/AccountScreen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.customer.AccountScreen">

    <ImageView
        android:id="@+id/imageViewNavigation"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:clickable="true"
        android:contentDescription="@string/navigation"
        android:focusable="true"
        android:onClick="goToNavigationScreen"
        android:src="@drawable/menu_alt_2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageViewAccount"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.063" />

    <ImageView
        android:id="@+id/imageViewAccount"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:clickable="false"
        android:contentDescription="@string/account"
        android:focusable="true"
        android:src="@drawable/account"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.063" />

    <TextView
        android:id="@+id/orders"
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        android:layout_marginTop="180dp"
        android:clickable="true"
        android:onClick="goToOrdersScreen"
        android:text="@string/orders"
        android:textColor="@color/RedPinky"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:focusable="true" />

    <TextView
        android:id="@+id/posts"
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        android:layout_marginTop="36dp"
        android:clickable="true"
        android:focusable="true"
        android:onClick="goToPostsScreen"
        android:text="@string/posts"
        android:textColor="@color/RedPinky"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/orders" />

    <TextView
        android:id="@+id/changePassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:clickable="true"
        android:onClick="goToChangePasswordScreen"
        android:text="@string/change_password"
        android:textColor="@color/RedPinky"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/posts"
        android:focusable="true" />

    <TextView
        android:id="@+id/logout"
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        android:layout_marginTop="36dp"
        android:clickable="true"
        android:focusable="true"
        android:onClick="logoutOfAccount"
        android:text="@string/logout"
        android:textColor="@color/RedPinky"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/changePassword" />
</androidx.constraintlayout.widget.ConstraintLayout>